# tinker

./: .env.example  .gitignore  CLAUDE.md  REQUIREMENTS.md  TODO.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 4a2d8e3f1b0c_add_boosts_table.py  58623114c17e_add_timeline_original_object_uri_index.py  5b1e9f2a3c4d_add_follower_activity_uri.py  64efd99ef4cc_add_indexes_for_frequently_queried_.py  a87933dc7e06_initial_schema.py  d630cad55ef3_add_bio_and_header_image_to_remote_.py
app/: __init__.py  media.py
app/admin/: __init__.py  api.py  auth.py  routes.py  sse.py
app/core/: __init__.py  config.py  database.py  formatting.py  http_client.py
app/federation/: __init__.py  actor.py  delivery.py  follow.py  inbox.py  outbox.py  signatures.py
app/models/: __init__.py  base.py  boost.py  delivery_queue.py  follower.py  following.py  keypair.py  like.py  media_attachment.py  note.py  notification.py  remote_actor.py  settings.py  timeline_item.py
app/public/: __init__.py  routes.py
app/repositories/: __init__.py  base.py  boost.py  delivery_queue.py  follower.py  following.py  keypair.py  like.py  media_attachment.py  note.py  notification.py  remote_actor.py  settings.py  timeline_item.py
app/services/: keypair.py  note.py  remote_actor.py  settings.py
docs/adr/: 001-jinja2-admin-templates.md
static/admin/: notifications.html  timeline.html
static/css/: home.css  styles.css
static/js/: home.js
static/pages/: home.html  login.html  profile.html
templates/admin/: base.html  followers.html  following.html  likes.html  notifications.html  profile.html  timeline.html
tests/: conftest.py
tests/integration/: test_admin_shells.py  test_auth_routes.py  test_delivery_pipeline.py  test_follow.py  test_inbox.py  test_interactions.py  test_likes_api.py  test_media_routes.py  test_note_routes.py  test_notifications_api.py  test_notifications_sse.py  test_profile_api.py  test_public_routes.py  test_search_api.py  test_security_headers.py  test_signature_refetch.py  test_social_graph_api.py  test_timeline_api.py
tests/unit/: test_app_factory.py  test_auth.py  test_config.py  test_database.py  test_delivery.py  test_follow_builders.py  test_keypair_service.py  test_media.py  test_note_service.py  test_outbox.py  test_remote_actor_service.py  test_signatures.py  (+2 more)
(+18 files in other folders)
